--- a/webapp/src/main/webapp/index.html
+++ b/webapp/src/main/webapp/index.html
@@ -236,6 +236,7 @@
                     <li><a ng-click="refreshLang()" href="#/{{lang}}/info/help">{{'help'| translate}}</a></li>
                     <li><a ng-click="refreshLang()" href="#/{{lang}}/info/contact">{{'contact'| translate}}</a></li>
                     <li><a ng-click="refreshLang()" href="#/{{lang}}/info/sources">{{'sources'| translate}}</a></li>
+                    <li><a ng-click="refreshLang()" href="#/{{lang}}/info/whatsNew">{{'whatsNew'| translate}}</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right" style="padding-right:0px" ng-controller="translate">
